--- a/Clash SL Server/App.config
+++ b/Clash SL Server/App.config
@@ -32,7 +32,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="mysql" connectionString="metadata=res://*/Database.CSSdb.csdl|res://*/Database.CSSdb.ssdl|res://*/Database.CSSdb.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=CSS;CharSet=utf8mb4;persistsecurityinfo=True;database=CSSdb&quot;" providerName="System.Data.EntityClient"/>
+    <add name="mysql" connectionString="metadata=res://*/Database.CSSdb.csdl|res://*/Database.CSSdb.ssdl|res://*/Database.CSSdb.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=CSS;password=ClashOfSL!2024;CharSet=utf8mb4;persistsecurityinfo=True;database=CSSdb&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <appSettings configSource="config.css"></appSettings>
   <system.data>
